Fixes to canvas and scrollbars and connectors now not editable

--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ body {
 
 .main-ws {
   height: 95%;
-  overflow: auto;
+  overflow: scroll;
 }
 
 .cont-main {
